# bibleread-rust

./: .gitignore
bible-extractor/: Cargo.toml
bible-extractor/src/: fetcher.rs  main.rs  output.rs  readme_template.md  types.rs
bible-reader/: package-lock.json  package.json
bible-reader/src/app/: globals.css  layout.tsx  page.tsx
bible-reader/src/app/book/[slug]/: page.tsx
bible-reader/src/app/book/[slug]/[chapter]/: page.tsx
bible-reader/src/components/: Sidebar.tsx
bible-reader/src/lib/: data.ts  useTTS.ts
